--- a/AdhaTest/App.config
+++ b/AdhaTest/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="username" value="adhadimas91" />
-    <add key="password" value="7471063kartika" />
+    <add key="username" value="username" />
+    <add key="password" value="password" />
     <add key="gistfile" value="index.html" />
     <add key="gistdesc" value="hello world" />
   </appSettings>
