--- a/AdhaTest/AdhaTest.csproj
+++ b/AdhaTest/AdhaTest.csproj
@@ -61,12 +61,11 @@
   <ItemGroup>
     <Compile Include="PageObject\DetailPage.cs" />
     <Compile Include="PageObject\HomePage.cs" />
+    <Compile Include="PageObject\KomenPage.cs" />
     <Compile Include="Testcase1.cs" />
-    <Compile Include="DeleteGist.cs" />
-    <Compile Include="EditGist.cs" />
-    <Compile Include="ListGist.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Testcase2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
